--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,28 @@
 .App {
   text-align: center;
+  background: rgb(208,248,254);
+  background: linear-gradient(0deg, rgba(208,248,254,1) 0%, rgba(253,139,29,1) 25%, rgba(68,67,255,1) 100%);
+  min-height: 100vh;
+  min-width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.name-placeholder{
+  font-size: 10vh;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-shadow: 0 0 80px rgb(255, 255, 255),0 0 30px rgb(101, 113, 122),0 0 6px rgb(116, 0, 139);
+  color: #fff;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
